Fix alignment navigation page buttons

--- a/static/assets/css/theme.css
+++ b/static/assets/css/theme.css
@@ -718,6 +718,7 @@ pre.chroma {
 }
 
 .page-footer .btn {
+  align-items: center;
   font-size: 14px;
   height: 100%;
   width: 100%;
